--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -62,8 +62,8 @@
     @@import url('https://fonts.googleapis.com/css?family=Numans');
 
     html, body {
-        background-size: cover;
-        background-repeat: no-repeat;
+        background-image: url('~/Content/logos.png');
+        background-repeat:repeat;
         height: 100%;
         font-family: 'Numans', sans-serif;
     }
