--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -69,9 +69,8 @@
     @@import url('https://fonts.googleapis.com/css?family=Numans');
 
     html, body {
-        background-size: cover;
-        background-repeat: no-repeat;
-        height: 100%;
+        background-image: url('../../Content/logos.png');
+        height: 30px;
         font-family: 'Numans', sans-serif;
     }
 
