--- a/Content/style.css
+++ b/Content/style.css
@@ -78,6 +78,14 @@ body {
                 color: var(--blue);
             }
 
+            .navigation ul li a .logo {
+                position: relative;
+                min-width: 60px;
+                height: 60px;
+                line-height: 70px;
+                text-align: center;
+            }
+
             .navigation ul li a .icon {
                 position: relative;
                 display: block;
@@ -90,6 +98,16 @@ body {
                 .navigation ul li a .icon ion-icon {
                     font-size: 1.75em;
                 }
+
+            .navigation ul li a .titles {
+                position: relative;
+                display: block;
+                padding: 0 10px;
+                height: 60px;
+                line-height: 60px;
+                text-align: start;
+                white-space: nowrap;
+            }
 
             .navigation ul li a .title {
                 position: relative;
@@ -189,10 +207,11 @@ body {
             border: 1px solid var(--black2);
         }
 
+
         .search label ion-icon {
             position: absolute;
-            top: 0;
-            left: 10px;
+            top: 11.5px;
+            left: 15px;
             font-size: 1.2em;
         }
 
