--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
                 <ul>
                     <li>
                         <a href="@Url.Action("Index", "Market")">
-                            <span class="icon"><ion-icon name="logo-apple"></ion-icon></span>
-                            <span class="title">EnergyTrade</span>
+                            <div class="logo"><img src="~/Content/logos.png" style="width:60px;height:60px;"> </div>
+                            <span class="titles">Collandtra</span>
                         </a>
                     </li>
                     <li>
@@ -43,14 +43,14 @@
                         </a>
                     </li>
                     <li>
-                        <a href="@Url.Action("MyItems", "Market")">
-                            <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
-                            <span class="title">My product</span>
+                        <a href="@Url.Action("MyProfile", "Market")">
+                            <span class="icon"><ion-icon name="bag-handle-outline"></ion-icon></span>
+                            <span class="title">My profile</span>
                         </a>
                     </li>
                     <li>
                         <a href="@Url.Action("Add", "Market")">
-                            <span class="icon"><ion-icon name="person-outline"></ion-icon></span>
+                            <span class="icon"><ion-icon name="bag-add-outline"></ion-icon></span>
                             <span class="title">Add new product</span>
                         </a>
                     </li>
@@ -62,7 +62,7 @@
                     </li>
                     <li>
                         <a href="@Url.Action("TradeRequests", "Trade")">
-                            <span class="icon"><ion-icon name="card-outline"></ion-icon></span>
+                            <span class="icon"><ion-icon name="swap-horizontal-outline"></ion-icon></span>
                             <span class="title">Trade requests</span>
                         </a>
                     </li>
