logo wallpaper, register wallpaper, menu buttot fix, logo changed,

--- a/Views/Market/Add.cshtml
+++ b/Views/Market/Add.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="style.css">
 <div class="d-flex justify-content-center">
     <div>
         <h2>Upload your product</h2>
