--- a/Views/Market/MyItems.cshtml
+++ b/Views/Market/MyItems.cshtml
@@ -130,10 +130,10 @@
         }
 
     img {
-        width: 200px;
-        height: 200px;
+        width: 184.5px;
+        height: 184.5px;
         text-align: center;
-        margin: 0 auto;
+        margin: auto;
         display: block;
     }
 
